--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #DDB892;
+            background-color: #FAEEEA;
             color: #333;
             text-align: center;
             margin: 0;
@@ -17,16 +17,16 @@
         .container {
             max-width: 400px;
             margin: 50px auto;
-            background: #E6CCB2;
+            background:#F5e2e2;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         .profile-img {
-            width: 100px;
-            height: 100px;
+            width: 140px;
+            height: 150px;
             border-radius: 50%;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
         .name {
             font-size: 24px;
@@ -41,7 +41,7 @@
         .link {
             display: block;
             text-decoration: none;
-            background: #D4A276;
+            background: #FAEEEA;
             color: #666;
             padding: 10px;
             border-radius: 5px;
@@ -49,41 +49,26 @@
             transition: 0.3s;
         }
         .link:hover {
-            background: #BC8A5F;
+            background: #E1a6ad;
         }
         .social-icons {
             margin-bottom: 10px;
         }
-        .social-icons a {
-            color: #926445;
-            font-size: 24px; /* Ícone menor */
-            text-decoration: none;
-            transition: 0.3s;
-        }
-        .social-icons a:hover {
-            color: #7F5539;
-        }
+       
     </style>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
-        <img src="Andre.jpg" alt="Foto de Perfil" class="profile-img">
-        <div class="name">Andre Costa</div>
-        <div class="bio">Conteúdo sobre lifestyle, moda e dicas diárias!</div>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/andrefrcosta?igsh=amNkd25tczN6bjll" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="https://www.tiktok.com/@andrefrcostaa?_t=ZN-8ul7dWk4LJe&_r=1" target="_blank">
-                <i class="fa-brands fa-tiktok"></i>
-            </a>
-            <a href="mailto:andrefilipereiscosta@gmail.com" class="email">
-                <i class="fa-solid fa-envelope"></i>
-            </a>
-        </div>
-        <a href="https://www.youtube.com/watch?v=WylQxZP9EkA&pp=ygURZGVzY2VuZG8gZG8gc2FsdG8%3D" class="link">EP.1 DESCENDO DO SALTO - HELENA COELHO</a>
-        <a href="https://open.spotify.com/show/32y0YBKqarvqdwHKPzzTbv?si=b26dd435ff08461f" class="link">DESCENDO DO SALTO - Spotify</a>
-        <a href="https://www.youtube.com/@poddescendodosalto" class="link">DESCENDO DO SALTO - YouTube</a>
+        <img src="Andre_1.jpg" alt="Foto de Perfil" class="profile-img">
+        <div class="name">André Costa</div>
+        <div class="bio">Segue-me em todas as redes, faz esse feitiço dar certo!</div>
+        <a href="https://www.instagram.com/andrefrcosta?igsh=amNkd25tczN6bjll" class="link"><i class="fab fa-instagram"></i> </a>
+        <a href="https://www.youtube.com/@poddescendodosalto" class="link"><i class="fab fa-youtube"></i> </a>
+        <a href="https://open.spotify.com/show/32y0YBKqarvqdwHKPzzTbv?si=b26dd435ff08461f" class="link"><i class="fab fa-spotify"></i> </a>
+        <a href="https://www.tiktok.com/@andrefrcostaa?_t=ZN-8ul7dWk4LJe&_r=1" class="link"><i class="fab fa-tiktok"></i> </a>
+        <a href="mailto:andrefilipereiscosta@gmail.com" class="link"><i class="fa-solid fa-envelope"></i> </a>
+      
     </div>
 </body>
 </html>
