--- a/VoaVoaAviaozinho.html
+++ b/VoaVoaAviaozinho.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecionando...</title>
     <script>
-        window.location.href = "https://www.youtube.com/watch?v=WylQxZP9EkA";
+        window.location.href = "https://track.betmenaffiliates.com/visit/?bta=38902&brand=vincispin&afp1=ANDRE&utm_campaign=instag";
     </script>
 </head>
 <body>
-    <p>Voa Voa meu aviaozinho, <a href="https://www.youtube.com/watch?v=WylQxZP9EkAO">clique aqui</a>.</p>
+    <p>Voa Voa meu aviaozinho, <a href="https://track.betmenaffiliates.com/visit/?bta=38902&brand=vincispin&afp1=ANDRE&utm_campaign=instag">clique aqui</a>.</p>
 </body>
 </html>
