--- a/Flytothemoon.html
+++ b/Flytothemoon.html
@@ -66,7 +66,7 @@
         <div class="bio">Segue-me em todas as redes, faz esse feitiço dar certo!</div>
         <!-- Link com ícone de avião e texto "Voa Aqui!" -->
         <a href="https://track.betmenaffiliates.com/visit/?bta=38902&brand=vincispin&afp1=ANDRE&utm_campaign=instag" class="link">
-            <i class="fas fa-plane"></i> Voa Aqui!
+            <i class="fas fa-plane"></i> Clica Aqui!
         </a>
     </div>
 </body>
