--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
        
     </style>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5001962471589583"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
