--- a/Flytothemoon.html
+++ b/Flytothemoon.html
@@ -66,7 +66,7 @@
         <div class="bio">Segue-me em todas as redes, faz esse feitiço dar certo!</div>
         <!-- Link com ícone de avião e texto "Voa Aqui!" -->
         <a href="https://track.betmenaffiliates.com/visit/?bta=38902&afp10=Streamers&brand=spinmama&afp1=andre&utm_campaign=INSTAGRAMBIO" class="link">
-            <i class="fas fa-plane"></i> Clica Aqui!
+            <i class="fas fa-plane"></i> Descobre Aqui!
         </a>
     </div>
 </body>
