--- a/Flytothemoon.html
+++ b/Flytothemoon.html
@@ -65,7 +65,7 @@
         <div class="name">André Costa</div>
         <div class="bio">Segue-me em todas as redes, faz esse feitiço dar certo!</div>
         <!-- Link com ícone de avião e texto "Voa Aqui!" -->
-        <a href="https://track.betmenaffiliates.com/visit/?bta=38902&afp10=Streamers&brand=spinmama&afp1=andre&utm_campaign=INSTAGRAMBIO" class="link">
+        <a href="https://www.tiktok.com/@andrefrcostaa/video/7509222249145158934?lang=en" class="link">
             <i class="fas fa-plane"></i> Descobre Aqui!
         </a>
     </div>
